# chart

./: .env  Cargo.toml  README.md  build.rs  compile  stock
src/: chart.rs  main.rs  settings.rs  toolbox.rs
src/chart/: axis.rs  candle.rs
usr/: chart  install.sh
usr/dll/: libSDL2-2.0.so.0
