[package]
name = "chart"
version = "0.1.0"
authors = ["GregoireHENRY <gregoire.henry@ipsa.fr>"]
edition = "2018"
build = "build.rs"

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dependencies.sdl2]
version = "0.33"
default-features = false
features = ["ttf", "image", "mixer"]

rustc-link-lib = [
    "SDL2",
    "SDL2_ttf",
    "freetype-6",
    "zlib1",
]

[profile.release]
lto = true

#LIBRARY_PATH
